frontend/test/should_fail/index_exec_loop_edge_fromIndexMultipleFromTo_index_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	for{e:AEdge in edgesFromIndexMultipleFromTo(j, j, j + 1, bari, 0, 42); true }
}